Bug 130165 - chatwindow doesn't scroll down anymore
Summary: chatwindow doesn't scroll down anymore
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: Chat Window (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-07-02 22:50 UTC by Adrian Friedli
Modified: 2008-03-01 16:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Adrian Friedli 2006-07-02 22:50:38 UTC
Version:           0.12.0 (using KDE Devel)
Installed from:    Compiled sources

If a chatwindow (with history) is opened or if a chatwindow is being resized, kopete doesn't scroll to the bottom anymore.

Kopete should always scroll to the bottom when the user opens a chatwindow.
And kopete should scroll to the bottom again when the user resizes the window and if the scrollbar was at the bottom before.
Comment 1 Jan Ritzerfeld 2008-01-19 15:37:43 UTC
Sorry, I cannot reproduce this.
Comment 2 Adrian Friedli 2008-01-19 19:48:41 UTC
Yes, kopete scrolls to bottom on new chat windows, this seems to be fixed since a while. But it would be nice if kopete would scroll to bottom on window resizing. But that is wishlist.
Comment 3 Dominik Haumann 2008-01-20 00:50:18 UTC
Kopete 0.12.7 here: assume your chat-window is full of text. if you now make the window's height smaller, the first line stays the same. I'd expect that the last line is fixed and always visible. I don't see how this bug can be resolved as worksforme ;) Konversation does it correct, just to have an example of how it should work.
Comment 4 Adrian Friedli 2008-01-20 20:20:36 UTC
Ok, I reopen this one.
Comment 5 Matt Rogers 2008-03-01 16:27:44 UTC
SVN commit 780893 by mattr:

Keep the chatwindow scrolled down when resizing.

BUG: 130165



 M  +8 -0      kopetechatwindow.cpp  
 M  +1 -0      kopetechatwindow.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=780893