Keep the chatwindow scrolled down when resizing.

BUG: 130165


svn path=/trunk/KDE/kdenetwork/kopete/; revision=780893